# reo_rs

./: .gitignore  Cargo.toml  README.md  README_old.md  TODO.md  cbindgen.toml  known_issues.md  mine.h  my_header.h  reo_rs.h  reo_rs_ext.h  rs_to_so.sh  test_header.c  todo.md
playground/: README.md
playground/c/: README.md  main.c  make.sh  reo_rs_ext.h
playground/example_generated/: alternator.rs  fifo1.rs  replicator.rs  sync.rs
playground/rust/: Cargo.toml  README.md
playground/rust/src/: fifo1.rs  main.rs  protocol.rs
src/: allocator.rs  bit_set.rs  building.rs  building2.rs  experiments.rs  ffi.rs  ffi_old.rs  funcbending.rs  hold.rs  index_set.rs  lib.rs  main.rs  new_tests.rs  ports.rs  rustfmt.toml  space_index_set.rs  tests.rs  type_info.rs
