[package]
name = "reo_rs"
version = "0.2.0"
authors = ["sirkibsirkib <christopher.esterhuyse@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
parking_lot = "0.7.1"
maplit = "1.0.1"
bidir-map = "1.0.0"
debug_stub_derive = "0.3.0"
crossbeam-channel = "0.3.8"
std-semaphore = "0.1.0"
smallvec = "0.6.10"
libc = "0.2.26"
# chunked_index_set = { git = "https://github.com/sirkibsirkib/chunked_index_set" }
chunked_index_set = { path = "../chunked_index_set" }

[dev-dependencies]
crossbeam-utils = "0.6.5"
rayon = "1.1.0"
rand = "0.7.0"
itertools = "0.8.0"